# SystemPulse

./: .gitignore  README.md  docker-compose.yml  start.md  trigger_anomaly.sh
agent/: CMakeLists.txt  Dockerfile  main.cpp  metrics_collector.hpp  ring_buffer.hpp  test  test.cpp
broker/: CMakeLists.txt  Dockerfile  concurrent_queue.hpp  main.cpp
grafana/dashboards/: telemetry.json
ml-processor/: app.py  requirements.txt
prometheus/: prometheus.yml
